# Android-Native-Activity-Tests

./: .gitignore  CMakeLists.txt  README  README.md  anat_tools.cmake  install_deps.sh
apps/: CMakeLists.txt
apps/01_empty_application/: CMakeLists.txt
apps/01_empty_application/src/: EmptyAppEventHandler.cpp  EmptyAppEventHandler.h  main.cpp
apps/02_opengles10_app/: CMakeLists.txt
apps/02_opengles10_app/src/: OpenGLES10EventHandler.cpp  OpenGLES10EventHandler.h  OpenGLES10GraphicsService.cpp  OpenGLES10GraphicsService.h  main.cpp
apps/03_opencv_capture_app/: CMakeLists.txt
apps/03_opencv_capture_app/src/: OpenCVCaptureEventHandler.cpp  OpenCVCaptureEventHandler.h  OpenCVCaptureGraphicsService.cpp  OpenCVCaptureGraphicsService.h  main.cpp
apps/04_opengles20_app/: CMakeLists.txt
apps/04_opengles20_app/src/: OpenGLES20EventHandler.cpp  OpenGLES20EventHandler.h  OpenGLES20GraphicService.cpp  OpenGLES20GraphicService.h  main.cpp
apps/05_ocv_gles20_app/: CMakeLists.txt
apps/05_ocv_gles20_app/src/: OpenGLES20EventHandler.cpp  OpenGLES20EventHandler.h  OpenGLES20GraphicService.cpp  OpenGLES20GraphicService.h  SmallSettingsFile.h  main.cpp  obj.frag  obj.vert  screen.frag  screen.vert
apps/06_OGRE_Test/: CMakeLists.txt
apps/06_OGRE_Test/src/: OGRETestApp.cpp  OGRETestApp.h  main.cpp
apps/3ds2ogre/: CMakeLists.txt
apps/3ds2ogre/src/: main.cpp
apps/android_openmax_test/: CMakeLists.txt
apps/android_openmax_test/src/: main.cpp
apps/application_test/: CMakeLists.txt
apps/application_test/src/: TestApplication.cpp  TestApplication.h  main.cpp
apps/aruco_test/: CMakeLists.txt
apps/aruco_test/src/: main.cpp
apps/camera_test/: CMakeLists.txt
apps/camera_test/src/: main.cpp
apps/ogre_aruco/: CMakeLists.txt
apps/ogre_aruco/src/: main.cpp
apps/ogre_opencv_visualizer/: CMakeLists.txt
apps/ogre_opencv_visualizer/src/: main.cpp
apps/ogre_test/: CMakeLists.txt
apps/ogre_test/src/: OGRETestApp.cpp  OGRETestApp.h  main.cpp
apps/ogre_test_001/: CMakeLists.txt
apps/ogre_test_001/src/: main.cpp
apps/ogre_test_002/: CMakeLists.txt
apps/ogre_test_002/data/: resources.cfg
apps/ogre_test_002/src/: TinyOgre.cpp  TinyOgre.h
apps/ogre_test_003/: CMakeLists.txt
apps/ogre_test_003/data/: resources.cfg
apps/ogre_test_003/src/: TestOgreApp.cpp  TestOgreApp.h  main.cpp
cmake/: android_cmake.sh
data/: CMakeLists.txt  README  camera.yml  my_mesh.mtl  resources.cfg.in
data/mesh_cube/: mesh005.blend  mesh005.mtl
modules/: CMakeLists.txt
modules/libapplication/: CMakeLists.txt
modules/libapplication/include/: IApplication.h  applicationtemplate.h  applicationtools.h
modules/libapplication_template/: CMakeLists.txt
modules/libapplication_template/include/: IApplication.h
modules/libapplication_template/src/: applicationtemplate.cpp  applicationtools.cpp
modules/libaruco/: CMakeLists.txt
modules/libaruco/src/: arucofidmarkers.cpp  board.cpp  boarddetector.cpp  cameraparameters.cpp  cvdrawingutils.cpp  marker.cpp  markerdetector.cpp
modules/libcamera/: CMakeLists.txt
modules/libcamera/include/: camera.h  util.h  video_device.h  yuv.h
modules/libcamera/src/: camera.cpp  capture.cpp  video_device.c  video_device.cpp  webcam.c  yuv.c  yuv.cpp
modules/libglestool/: CMakeLists.txt
modules/libglestool/include/: ErrorHandler.cpp  ErrorHandler.h  FastEGLTexture.h  FileShaderLoader.h  GLMatrix4x4.h  IImageTexture.h  IMeshExporter.h  IShaderLoader.h  IShaderProgram.h  Mesh.h  OBJLoader.h  RAWMeshExporter.h  RGBTexture.h  ShaderProgram.h  SimpleShaderProgram.cpp  SimpleShaderProgram.h  extOBJLoader.h
modules/libglestool/src/: ErrorHandler.cpp  FastEGLTexture.cpp  FileShaderLoader.cpp  GLMatrix4x4.cpp  IMeshExporter.cpp  IShaderLoader.cpp  IShaderProgram.cpp  Mesh.cpp  OBJLoader.cpp  RAWMeshExporter.cpp  RGB565Texture.cpp  RGBATexture.cpp  RGBTexture.cpp  ShaderProgram.cpp  extOBJLoader.cpp
modules/libtools/: .project  CMakeLists.txt
modules/libtools/include/: AndroidGraphicBuffer.h  AssetFileResource.h  CircleProcessor.h  CopyProcessor.h  EGLDispatcher.h  FPSCalculator.h  ICaptureService.h  IEventEngine.h  IGraphicsService.h  IObject.h  IProcessor.h  IService.h  NullCapture.h  OpenCVCapture.h  RGB565Texture.h  RGBATexture.h  tools.h
modules/libtools/src/: AndroidGraphicBuffer.cpp  AssetFileResource.cpp  CircleProcessor.cpp  CopyProcessor.cpp  EGLDispatcher.cpp  FPSCalculator.cpp  GLTriangle.cpp  IEventEngine.cpp  IGraphicsService.cpp  IImageTexture.cpp  IProcessor.cpp  IService.cpp  NullCapture.cpp  OpenCVCapture.cpp
native_activity_empty/jni/: IEventEngine.h  SimpleEventProcessor.cpp  (+1 more)
native_test_app_1/: CMakeLists.txt
native_test_app_1/jni/: EventLoop.cpp  EventLoop.h  Log.cpp  main.cpp
native_test_app_2/: CMakeLists.txt
native_test_app_3/: CMakeLists.txt
native_test_app_4/: CMakeLists.txt
native_test_app_5/: .cproject  .project  AndroidManifest.xml  CMakeLists.txt
native_test_app_5/jni/: ActivityHandler.h  DroidBlaster.cpp  EventLoop.cpp  GraphicsService.cpp  GraphicsService.h  GraphicsTexture.cpp  GraphicsTexture.h  Log.h  Resources.cpp  Resources.h  Types.hpp
native_test_app_9/: CMakeLists.txt
native_test_app_9/jni/: GLObject.cpp  GLTriangle.cpp  GLTriangle.h  GraphicsService.cpp  IGraphicsObject.cpp  IGraphicsObject.h  Point.cpp  Point.h  RGBTexture.h  Triangle.cpp  Triangle.h  main.cpp  tools.h
opencv_capture_app/: CMakeLists.txt  README
opengles_app/: CMakeLists.txt  README
opengles_app/jni/: ICaptureService.cpp  ICaptureService.h  IEventEngine.cpp  ITexture.cpp  NativeWindowGraphicsService.cpp  NativeWindowGraphicsService.h  NullCapture.cpp  OpenCVCapture.cpp  OpenCVCapture.h  OpenGLES100GraphicsService.cpp  OpenGLES100GraphicsService.h  OpenGLESTestEventEngine.cpp  OpenGLESTestEventEngine.h  RGBTexture.h  main.cpp
sensors_list/: README
tools/: AndroidManifest.xml  GLObject.h  GLTriangle.cpp  GLTriangle.h  RGBTexture.cpp  copy_lib.sh  eglGraphicsBuffer.cpp  include_dirs_for_rep_home.xml  include_dirs_for_rep_work.xml  include_paths_native_app_home_comp.xml  include_paths_native_app_work_comp.xml
(+72 files in other folders)
